Fixed table overflow and handeled the missing format case.

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -650,6 +650,8 @@ body {
 
 			.visualization.table {
 				overflow: auto;
+				width: initial;
+				max-width: initial;
 			}
 				.visualization.table table {
 					caption-side: bottom;
